homeStyle.css
body {
    background-image: url('https://upload.wikimedia.org/wikipedia/commons/f/fc/Flag_of_Mexico.svg');
    width: 100%;
    height: 20%;
    position: absolute; 
    left: 0px; 
    top: 0px;
    background-repeat: no-repeat;
    background-size: cover;

}


h1 {
    justify-content: center;
    align-items: center;
    display: flex;
    font-size: 3rem;
}

body {
    justify-content: center;
    align-items: center ;
    align-content: center;
    text-align: center;
    font-family: Arial, Helvetica, sans-serif;

}


#carnitas, #friedFish{
    box-sizing: content-box;
    border: solid black 1px;
    justify-content: center;
    align-items: center;
    text-align: center;
    border-top: 1rem;
    border-left: 2rem;
    border-right: 2rem;
    width: 20rem;
    height: 15rem;
    object-fit: cover;  
    border: 2px solid black;
   
}

#carnitas {
    transform: translate(-9em);
}

#friedFish {
    transform: translate(9em);
}

#carneAsada, #groundBeef {
    width: 50%;
    justify-content: center;
    text-align: center;
    border-top: 6em;
    border-left: 2rem;
    border-right: 2rem;
    width: 20rem;
    height: 15rem;
    object-fit: cover;
    border: 2px solid black;
}

#carneAsada {
    transform: translate(-9em);
}

#groundBeef {
    transform: translate(9em);
}

#secondRow {
    padding: 50px;
}

